Considering layout change...
Not sure what the final answer will be tomorrow : - O

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 bg-warning">
-      navbar
+    <div class="col-12">
+      <h1>Fave SW People</h1>
     </div>
   </div>
   <div class="row">
     <div class="col-3 d-none d-lg-block bg-danger">
-      sidebar
+      navbar
     </div>
     <div class="col-12 col-lg-9 bg-info" style="min-height: 100vh;">
       <router-outlet />
