--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-      <nav class="list-group col-3 d-none d-lg-block">
+      <nav class="list-group col-12 col-lg-3 mb-3">
         <a class="list-group-item list-group-item-action" routerLink="/">
           Home
         </a>
@@ -13,7 +13,7 @@
           Tom's Faves
         </a>
       </nav>
-    <div class="col-12 col-lg-9">
+    <div class="col-12 col-lg-9 ps-0">
       <router-outlet />
     </div>
   </div>
