--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -1,4 +1,5 @@
 <ul class="list-group">
+  <li class="list-group-item list-group-item-secondary text-black-50">Tom's Faves</li>
   <li class="list-group-item">
     <input class="form-check-input me-3" type="checkbox" value="" id="firstCheckbox">
     <label class="form-check-label" for="firstCheckbox">First checkbox</label>
