--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-12 bg-warning">
-      navbar
+      title
     </div>
   </div>
   <div class="row">
-    <div class="col-3 d-none d-lg-block bg-danger">
-      sidebar
+    <div class="col-12 col-lg-3 bg-danger" style="height: 200px;">
+      nav
     </div>
-    <div class="col-12 col-lg-9 bg-info" style="min-height: 100vh;">
+    <div class="col-12 col-lg-9 bg-info" style="height: 600px;">
       content
     </div>
   </div>
