--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,20 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 bg-danger">
+      title
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 bg-warning" style="height: 200px;">
+      nav
+    </div>
+    <div class="col-12 bg-info">
+      content
+    </div>
+  </div>
+</div>
+
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
