--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,10 +3,10 @@
     <div class="col-12 bg-danger">title</div>
   </div>
   <div class="row">
-    <div class="col-12 bg-warning" style="height: 200px">
+    <div class="col-12 col-lg-3 bg-warning" style="height: 200px">
       nav
     </div>
-    <div class="col-12 bg-info" style="height: 700px">
+    <div class="col-12 col-lg-9 bg-info" style="height: 700px">
       content
     </div>
   </div>
