Created a list item for the nav on the left

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 bg-primary" style="height:150px">
-      Title
+      <h1 class="text-uppercase">Favorite Star Wars People</h1>
     </div>
   </div>
   <div class="row">
     <div class="col-12 col-lg-3 bg-danger" style="height: 250px;">
-      nav
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action">Home</a>
+      </div>
     </div>
 
     <div class="col-12 col-lg-9 bg-warning">
