--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
 		<div class="col-12 col-lg-3">
 			<div class="list-group">
 				<a href="/" class="list-group-item list-group-item-action">Home</a>
-				<a href="/aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
+				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
 			</div>
 		</div>
 
