--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,8 @@
   <div class="row">
     <div class="col-12 col-lg-3">
       <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action">Home</a>
+        <a routerLink="" class="list-group-item list-group-item-action">Home</a>
+        <a routerLink="/mnguyen" class="list-group-item list-group-item-action">Matt's Faves</a>
       </div>
     </div>
     <div class="col-12 col-lg-9">
