--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
 				<a routerLink="/" class="list-group-item list-group-item-action">Home</a>
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">csmith's faves</a>
+        <a routerLink="/akoroliova" class="list-group-item list-group-item-action">akoroliova's faves</a>
 			</div>
 		</div>
 
@@ -18,4 +19,3 @@
 			<router-outlet />
 		</div>
 	</div>
-</div>
