--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
 				<a routerLink="/" class="list-group-item list-group-item-action">Home</a>
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">csmith's faves</a>
+				<a routerLink="yyang22" class="list-group-item list-group-item-action">Yyang22's faves</a>
 			</div>
 		</div>
 
@@ -18,4 +19,24 @@
 			<router-outlet />
 		</div>
 	</div>
+  <div class="row">
+    <div class="col-12">
+      <h1 class="text-uppercase">Fave SW People</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-lg-3">
+      <div class="list-group">
+        <a routerLink="" class="list-group-item list-group-item-action">
+          Home
+        </a>
+        <a routerLink="/yyang22" class="list-group-item list-group-item-action">
+          yyang22's Faves
+        </a>
+      </div>
+    </div>
+    <div class="col-12 col-lg-9">
+      <router-outlet />
+    </div>
+  </div>
 </div>
