--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,8 @@
 	<div class="row">
 		<div class="col-12 col-lg-3">
 			<div class="list-group">
-				<a href="/" class="list-group-item list-group-item-action">Home</a>
+				<a routerLink="/" class="list-group-item list-group-item-action">Home</a>
+				<a routerLink="csmith" class="list-group-item list-group-item-action">csmith's faves</a>
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
 			</div>
 		</div>
