--- a/src/app/mnguyen-faves/mnguyen-faves.html
+++ b/src/app/mnguyen-faves/mnguyen-faves.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-    <li class="list-group-item list-group-item-secondary text-black-50">Matt's Faves</li>
+    <li class="list-group-item list-group-item-secondary text-black-50">Matt's Goblins</li>
   <li class="list-group-item">
     <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
     <label class="form-check-label stretched-link" for="firstCheckboxStretched">First checkbox</label>
