--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
     <div class="col-12 col-lg-3">
       <div class="list-group mb-3">
         <a routerLink="" class="list-group-item list-group-item-action">Home</a>
-        <a routerLink="/mnguyen" class="list-group-item list-group-item-action">Matt's Faves</a>
+        <a routerLink="/mnguyen" class="list-group-item list-group-item-action">Matt's Goblins</a>
       </div>
     </div>
     <div class="col-12 col-lg-9">
