--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,14 @@
 		<div class="col-12 col-lg-3">
 			<div class="list-group">
 				<a routerLink="/" class="list-group-item list-group-item-action">Home</a>
-				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
         <a routerLink="/akoroliova" class="list-group-item list-group-item-action">akoroliova's faves</a>
+				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Component</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">csmith's faves</a>
-			<router-outlet />
+			</div>
+		</div>
+
+		<div class="col-12 col-lg-9">
+			<router-outlet></router-outlet>
 		</div>
 	</div>
+</div>
