--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
 				<a routerLink="/akoroliova" class="list-group-item list-group-item-action">Alexandra's Faves</a>
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Faves</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">Cord's Faves</a>
+				<a routerLink="tsteele" class="list-group-item list-group-item-action">Tom's Faves</a>
 			</div>
 		</div>
 		<div class="col-12 col-lg-9">
