--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -15,7 +15,7 @@
 					type="checkbox" 
 					value="" 
 					[id]="p.name"
-					[checked]="p.name == 'C-3PO' ? true : false"
+					[checked]="p.name == 'C-3PO' || p.name == 'R2-D2' ? true : false"
 				/>
 				<label 
 					class="form-check-label stretched-link" 
