--- a/src/app/aspriggs-favs/aspriggs-favs.html
+++ b/src/app/aspriggs-favs/aspriggs-favs.html
@@ -2,10 +2,16 @@
     <li class="list-group-item list-group-item-secondary text-black-50">
         Austin's faves
     </li>
-    @for (p of people$ | async; track $index) {
-        <li class="list-group-item">
-            <input type="text" class="form-check-input me-1" type="checkbox" [id]="p.name">
-            <label [for]="p.name" class="fpr,=check-label stretched-link">{{ p.name }}</label>
+    @if (people$ | async; as people) {
+        @for (p of people; track $index) {
+            <li class="list-group-item">
+                <input type="text" class="form-check-input me-2" type="checkbox" [id]="p.name">
+                <label [for]="p.name" class="check-label stretched-link">{{ p.name }}</label>
+            </li>
+        }
+    } @else {
+        <li class="list-group-item list-group-item-info">
+            Loading...
         </li>
     }
 </ul>
