--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -22,7 +22,7 @@
 		Promises fun ! ! !
 	</button>
   </li>
-  @if(people$ | async; as people){
+  @if(people){
     @for (p of people; track p) {
       <li 
         class="list-group-item"
