--- a/src/app/ola-faves/ola-faves.html
+++ b/src/app/ola-faves/ola-faves.html
@@ -1,28 +1,32 @@
 <ul class="list-group">
-  <li class="list-group-item list-group-item-secondary text-black-50">
+  <li 
+    class="list-group-item list-group-item-secondary text-black-50"
+  >
     Ola's Faves
-  </li>
-  @if(people$ | async; as people){
-    @for (p of people; track p) {
-      <li 
-        class="list-group-item"
-      >
-        <input 
-          class="form-check-input me-3" 
-          type="checkbox" 
-          value="" 
-          [id]="p.name"
-        >
-        <label 
-          class="form-check-label stretched-link" 
-          [for]="p.name"
-        >
-          {{ p.name }}
-        </label>
+</li>
+    @if(people$ | async; as people){
+    @for (p of people; track p){
+  <li 
+    class="list-group-item"
+  >
+    <input 
+      class="form-check-input me-3" 
+      type="checkbox" 
+      value="" 
+      [id]="p.name"
+    >
+    <label 
+      class="form-check-label stretched-link" 
+      [for]="p.name"
+    >
+      {{ p.name }}
+      </label>
       </li>
     }
   } @else {
-    <li class="list-group-item list-group-item-info">
+    <li 
+      class="list-group-item list-group-item-info"
+    >
       Loading...
     </li>
   }
