promises with async await

--- a/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
+++ b/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
@@ -3,7 +3,12 @@
         akoroliova's faves
     </li>
     <li class="list-group-item">
-      <button class="btn btn-link" (click)="promisesAsThenables()">Promises as "thenables"</button>
+      <button class="btn btn-link" (click)="promisesAsThenables()">
+        Promises as "thenables"
+      </button>
+      <button class="btn btn-link" (click)="promisesWithAsyncAwait()">
+        Promises with asynk/await and try/catch
+      </button>
     </li>
   <li class="list-group-item">
     <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
