--- a/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
+++ b/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
@@ -9,6 +9,9 @@
       <button class="btn btn-link" (click)="promisesWithAsyncAwait()">
         Promises with asynk/await and try/catch
       </button>
+      <button class="btn btn-link" (click)="promisesFun()">
+        Promises Funn
+      </button>
     </li>
   <li class="list-group-item">
     <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
