--- a/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
+++ b/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
@@ -13,16 +13,28 @@
         Promises Funn
       </button>
     </li>
-  <li class="list-group-item">
-    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
-    <label class="form-check-label stretched-link" for="firstCheckboxStretched">First checkbox</label>
-  </li>
-  <li class="list-group-item">
-    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckboxStretched">
-    <label class="form-check-label stretched-link" for="secondCheckboxStretched">Second checkbox</label>
-  </li>
-  <li class="list-group-item">
-    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckboxStretched">
-    <label class="form-check-label stretched-link" for="thirdCheckboxStretched">Third checkbox</label>
-  </li>
+  @if(people$ | async; as people){
+    @for (p of people; track p) {
+      <li 
+        class="list-group-item"
+      >
+        <input 
+          class="form-check-input me-3" 
+          type="checkbox" 
+          value="" 
+          [id]="p.name"
+        >
+        <label 
+          class="form-check-label stretched-link" 
+          [for]="p.name"
+        >
+          {{ p.name }}
+        </label>
+      </li>
+    }
+  } @else {
+    <li class="list-group-item list-group-item-info">
+      Loading...
+    </li>
+  }
 </ul>
