Phew, maybe signal for avg height..
But lots-o-discoveries... Little things good for students to see, they will have to discover nuance ! ! !

. height is string in data from swapi

. divide by zero protection or NaN in app : - (

. not all people have heights, have to handle that one next

--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -27,7 +27,7 @@
       Faves Cout: {{faveCount()}}
     </p>
     <p>
-      Faves Fun Fact: Avg Height 0cm
+      Faves Fun Fact: {{ `Avg Height ${ avgFaveHeight() }cm` }}
     </p>
   </li>
   @if(people().length > 0){
