--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-lg-3">
-      <div class="list-group">
+      <div class="list-group mb-3">
         <a routerLink="" class="list-group-item list-group-item-action">Home</a>
         <a routerLink="/fsindar" class="list-group-item list-group-item-action">Furkan's faves</a>
       </div>
