Adding fukan's back after resolving merge conflict...
A different merge conflict technique, but remember it's knowing what the end goal is ! ! !

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,6 +12,7 @@
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Faves</a>
 				<a routerLink="/bfunmaker" class="list-group-item list-group-item-action">Bryson's Faves</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">Cord's Faves</a>	
+				<a routerLink="/fsinder" class="list-group-item list-group-item-action">Furkan's Faves</a>				
 				<a routerLink="yyang22" class="list-group-item list-group-item-action">Katies's Faves</a>				
 				<a routerLink="kimberg" class="list-group-item list-group-item-action">Kyle's Faves</a>
 		    	<a routerLink="/mnguyen" class="list-group-item list-group-item-action">Matt's Faves</a>
