--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -24,10 +24,10 @@
   </li>
   <li class="list-group-item list-group-item-light">
     <p>
-      Faves Cout: {{faveCount()}}
+      Faves Count: {{faveCount()}}
     </p>
     <p>
-      Faves Fun Fact: {{ `Avg Height ${ avgFaveHeight() }cm` }}
+      Faves Fun Fact: {{ `Avg Height ${ avgFaveHeight() }` }}
     </p>
   </li>
   @if(people().length > 0){
