--- a/src/app/bfunmaker-faves/bfunmaker-faves.html
+++ b/src/app/bfunmaker-faves/bfunmaker-faves.html
@@ -2,6 +2,11 @@
     <li class="list-group-item list-group-item-secondary text-black-50">
         Bryson's Faves
     </li>
+    <li class="list-group-item">
+      <button class="btn btn-link" (click)="promisesAsThenables()">
+      Promises as "thenables"
+      </button>
+    </li>
     @if (people$ | async; as people) {
       @for (p of people$ | async; track p) {
         <li class="list-group-item">
