--- a/src/app/mnguyen-faves/mnguyen-faves.html
+++ b/src/app/mnguyen-faves/mnguyen-faves.html
@@ -7,6 +7,12 @@
     <button class="btn btn-link" (click)="promisesWithAsyncAwait()">Promises with async/wait and try/catch</button>
     <button class="btn btn-link" (click)="promisesFun()">Promises ! ! !</button>
   </li>
+  <li class="list-group-item list-group-item-dark">
+    <p>
+      Faves Count: 0
+    </p>
+    <p>Faves Fun Fact: Avg Height 0cm</p>
+  </li>
   @if(people$ | async; as people){
     @for (p of people; track p) {
       <li 
