added a display type for component

--- a/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
+++ b/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
@@ -18,7 +18,7 @@
         Fave's count: 0
       </p>
       <p>
-        Faves Fun Fact: populst eye color is green
+        Faves Fun Fact: most popular eye color is green
       </p>
     </li>
   @if(people$ | async; as people){
