--- a/src/app/yyang22-faves/yyang22-faves.html
+++ b/src/app/yyang22-faves/yyang22-faves.html
@@ -28,8 +28,8 @@
         Fave's Fun Fact: Avg Height 0cm
       </p>
     </li>
-    @if (people$ | async; as people) {
-      @for (p of people$ | async; track p) {
+    @if (people) {
+      @for (p of people | async; track p) {
         <li 
           class="list-group-item"
         >
