refactored people to be a signal

--- a/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
+++ b/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
@@ -21,8 +21,8 @@
         Faves Fun Fact: most popular eye color is green
       </p>
     </li>
-  @if(people){
-    @for (p of people; track p) {
+  @if(people().length > 0){
+    @for (p of people(); track p) {
       <li 
         class="list-group-item"
       >
