--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -30,8 +30,8 @@
       Faves Fun Fact: Avg Height 0cm
     </p>
   </li>
-  @if(people){
-    @for (p of people; track p) {
+  @if(people().length > 0){
+    @for (p of people(); track p) {
       <li 
         class="list-group-item"
       >
