binded checkboxes to favecount signal
imported computed property as well
created toggled check function in component ts

--- a/src/app/bfunmaker-faves/bfunmaker-faves.html
+++ b/src/app/bfunmaker-faves/bfunmaker-faves.html
@@ -14,12 +14,17 @@
       </button>
     </li>
     <li class="list-group-item">
-      Fave Fun Fact: Avg Height 0cm
+      <p>
+        Fave Count: {{ faveCount() }}
+      </p>
+      <p>
+        Fave Fun Fact: Avg Height 0cm
+      </p>
     </li>
     @if (people().length > 0) {
       @for (p of people(); track p) {
         <li class="list-group-item">
-          <input class="form-check-input me-3" type="checkbox" value="" [id]="p.name">
+          <input class="form-check-input me-3" type="checkbox" [checked]="p.checked" (change)="toggleChecked(p)" [id]="p.name">
           <label class="form-check-label stretched-link" [for]="p.name">
             {{ p.name }}
           </label>
