fave Count working... woo hoo

--- a/src/app/kimberg-faves/kimberg-faves.html
+++ b/src/app/kimberg-faves/kimberg-faves.html
@@ -24,7 +24,7 @@
   </li>
   <li class="list-group-item list-group-item-dark">
     <p>
-      Faves Count: 0
+      Faves Count: {{ faveCount() }}
     </p>
     <p>
       Faves Fun Fact: Avg Height 0cm
@@ -38,7 +38,8 @@
         <input 
           class="form-check-input me-3" 
           type="checkbox" 
-          value="" 
+          [checked]="p.checked"
+          (change)="toggleChecked(p)"
           [id]="p.name"
         >
         <label 
