--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -9,6 +9,9 @@
     <button class="btn btn-link" (click)="promisesWithAsyncAwait()">
       Promises with async/await and try/catch
     </button>
+    <button class="btn btn-link" (click)="promisesFun()">
+      Promises Fun !!!
+    </button>
   </li>
   @if(people$ | async; as people){
     @for (p of people; track p) {
