--- a/src/app/ola-faves/ola-faves.html
+++ b/src/app/ola-faves/ola-faves.html
@@ -36,7 +36,7 @@
     </p>
   </li>
   
-  @if(people$ | async; as people){
+  @if(people){
   @for (p of people; track p){
   <li 
     class="list-group-item"
