Changing my fun fact to people shorter than me

--- a/src/app/bfunmaker-faves/bfunmaker-faves.html
+++ b/src/app/bfunmaker-faves/bfunmaker-faves.html
@@ -18,7 +18,7 @@
         Fave Count: {{ faveCount() }}
       </p>
       <p>
-        Fave Fun Fact: Avg Height 0cm
+        Fun Fact: # of People who are shorter than me (177 cm / 5'7" in): 0
       </p>
     </li>
     @if (people().length > 0) {
