--- a/src/app/ola-faves/ola-faves.html
+++ b/src/app/ola-faves/ola-faves.html
@@ -32,7 +32,7 @@
       Faves Count: {{ faveCount() }}
     </p>
     <p>
-      Faves Fun Fact: Avg Height is {{avgFaveHeight()}} cm
+      Faves Fun Fact: Avg Height is {{ avgFaveHeight() }}
     </p>
   </li>
   
