--- a/src/app/ola-faves/ola-faves.html
+++ b/src/app/ola-faves/ola-faves.html
@@ -45,7 +45,7 @@
       class="form-check-input me-3" 
       type="checkbox" 
       [checked]="p.checked"
-      (changed)="toggleChecked(p)"
+      (change)="toggleChecked(p)"
       [id]="p.name"
     >
     <label 
