--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -30,7 +30,7 @@
       Faves Fun Fact: Avg height 0 cm
     </p>
   </li>
-  @if(people$ | async; as people){
+  @if(people){
     @for (p of people; track p) {
       <li 
         class="list-group-item"
