Calculated skin colors from SWAPI...

--- a/src/app/kimberg-faves/kimberg-faves.html
+++ b/src/app/kimberg-faves/kimberg-faves.html
@@ -29,6 +29,9 @@
     <p>
       Faves Fun Fact: {{ avgFaveHeight() }}
     </p>
+    <p>
+      {{ faveSkinColorCounts() }}
+    </p>
   </li>
   @if(people().length > 0){
     @for (p of people(); track p) {
