Skelletoned (v.) in the prop and func we need for post to ms teams!

--- a/src/app/tsteele-faves/tsteele-faves.html
+++ b/src/app/tsteele-faves/tsteele-faves.html
@@ -34,9 +34,11 @@
         class="form-control form-control-sm mb-1"
         placeholder="Who are you?"
         type="text"
+        [(ngModel)]="who"
       />
       <button 
         class="btn btn-link p-0"
+        (click)="postToMsTeams()"
       >
         Post to MS Teams
       </button>
