--- a/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
+++ b/src/app/akoroliova-fave-sw-people/akoroliova-fave-sw-people.html
@@ -21,9 +21,11 @@
         Faves Fun Fact: {{averageFaveHeight()}}
       </p>
 
+  
+
       <p>
-        <input class="form-control form-control-sm mb-1" placeholder="type something?.. " type="text"/>
-        <button class="btn btn-link p-0">///Post to MS Teams///</button>
+        <input class="form-control form-control-sm mb-1" placeholder="type something?.. " type="text"  [(ngModel)]="who"/>
+        <button class="btn btn-link p-0" (click)="postToMsTeams()">///Post to MS Teams///</button>
       </p>
 
     </li>
