--- a/src/app/bfunmaker-faves/bfunmaker-faves.html
+++ b/src/app/bfunmaker-faves/bfunmaker-faves.html
@@ -37,7 +37,7 @@
       @for (p of people(); track p) {
         <li class="list-group-item">
           <input class="form-check-input me-3" type="checkbox" [checked]="p.checked" (change)="toggleChecked(p)" [id]="p.name">
-          <label class="form-check-label stretched-link" [for]="p.name">
+          <label [class.text-warning]="p.invalidHeight" class="form-check-label stretched-link" [for]="p.name">
             {{ p.name }}
           </label>
         </li>
