--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,7 @@
 				<a routerLink="/akoroliova" class="list-group-item list-group-item-action">Alexandra's Faves</a>
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Faves</a>
 				<a routerLink="/bfunmaker" class="list-group-item list-group-item-action">Bryson's Faves</a>
+				<a routerLink="/copilot" class="list-group-item list-group-item-action">Copilot's Faves</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">Cord's Faves</a>	
 				<a routerLink="/fsinder" class="list-group-item list-group-item-action">Furkan's Faves</a>				
 				<a routerLink="yyang22" class="list-group-item list-group-item-action">Katies's Faves</a>				
