--- a/src/app/aspriggs-favs/aspriggs-favs.html
+++ b/src/app/aspriggs-favs/aspriggs-favs.html
@@ -2,6 +2,9 @@
     <li class="list-group-item list-group-item-secondary text-black-50">
         Austin's faves
     </li>
+    <li class="list-group-item">
+        <button class="btn btn-link" (click)="promisesAsThenables()">Promises as "thenables"</button>
+    </li>
     @if (people$ | async; as people) {
         @for (p of people; track $index) {
             <li class="list-group-item">
