--- a/src/app/aspriggs-favs/aspriggs-favs.html
+++ b/src/app/aspriggs-favs/aspriggs-favs.html
@@ -8,6 +8,9 @@
     <li class="list-group-item">
         <button class="btn btn-link" (click)="promisesWithAsyncAwait()">Promises with async await</button>
     </li>
+    <li class="list-group-item">
+        <button class="btn btn-link" (click)="promisesFun()">Promises fun!</button>
+    </li>
     @if (people$ | async; as people) {
         @for (p of people; track $index) {
             <li class="list-group-item">
