formated aspriggs-favs.ts to use ngOnInit()

--- a/src/app/aspriggs-favs/aspriggs-favs.html
+++ b/src/app/aspriggs-favs/aspriggs-favs.html
@@ -7,6 +7,10 @@
         <button class="btn btn-link" (click)="promisesWithAsyncAwait()">Promises with async await</button>
         <button class="btn btn-link" (click)="promisesFun()">Promises fun!</button>
     </li>
+    <li class="list-group-item list-group-item-dark">
+        <p>Faves Count</p>
+        <p>Faves Fun Fact: Avg Height 0cm</p>
+    </li>
     @if (people$ | async; as people) {
         @for (p of people; track $index) {
             <li class="list-group-item">
