--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,6 +9,7 @@
 			<div class="list-group">
 				<a routerLink="/" class="list-group-item list-group-item-action">Home</a>
 				<a routerLink="/akoroliova" class="list-group-item list-group-item-action">Alexandra's Faves</a>
+				<a routerLink="/bot" class="list-group-item list-group-item-action">Bot's Faves</a>
 				<a routerLink="aspriggs" class="list-group-item list-group-item-action">Austin's Faves</a>
 				<a routerLink="/bfunmaker" class="list-group-item list-group-item-action">Bryson's Faves</a>
 				<a routerLink="csmith" class="list-group-item list-group-item-action">Cord's Faves</a>	
